# template

./: .env.example  .gitignore  LICENSE  Makefile  compose.local.yml  compose.override.yml  docker-compose.override.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py  main.py        tasks.py
backend/app/api/: items.py  users.py   
backend/app/api/v1/: __init__.py  items.py  pays.py  posts.py  users.py
backend/app/core/: dependencies.py  dependencies.py      logging.py       settings.py
backend/app/cron/: scheduler.py         
backend/app/integrations/clients/: base.py
backend/app/models/: post.py  user.py
backend/app/repositories/: post_repo.py  user_repo.py
backend/app/schemas/: post.py  user.py
backend/app/services/: pay_service.py  post_service.py  user_service.py
backend/app/services/pay_providers/: stripe_provider.py
backend/app/tasks/: jobs.py  worker.py    
backend/app/utils/: pagination.py  security.py
backend/app/workers/: tasks.py
backend/scripts/: generate_ts_client.py
backend/src/api/: __init__.py
backend/src/app/: main.py      
backend/src/core/: logging.py       settings.py        
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: route.ts
frontend/components/: theme-provider.tsx  theme-toggle.tsx
frontend/lib/: api.ts
frontend/pages/: robots.txt.ts
frontend/public/: .gitkeep
frontend/styles/: globals.css
infra/compose/: compose.local.yml  compose.override.example.yml  compose.override.yml  compose.test.yml  compose.yml  stack.dev.yml  stack.prod.yml
infra/nginx/: prod.conf
infra/traefik/: traefik.yml
(+35 files in other folders)
